Added SUMWARS_PORTABLE_MODE, currently not used in code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ OPTION(SUMWARS_NO_ENET "Do not use bundled, in-source ENET Lib" OFF)
 OPTION(SUMWARS_BUILD_TOOLS "Builds editor tools (not needed for gameplay, only useful for content authors)" ON)
 OPTION(SUMWARS_UPDATE_HG_REVISION "Option to enable or disable automatic revision checking" ON)
 OPTION(SUMWARS_POST_BUILD_COPY "After a build, copy the executable to the project folder (Win32)" OFF)
-OPTION(SUMWARS_STANDALONE_MODE "(Highly recommended for deployment on Windows and MacOSX) In case this is enabled, all paths (share, doc, bin) are set to be relative." OFF)
+OPTION(SUMWARS_STANDALONE_MODE "(Highly recommended for deployment on Windows and MacOSX) In case this is enabled, all paths (share, doc, bin) are set to be relative" OFF)
+OPTION(SUMWARS_PORTABLE_MODE "In case this is enabled, save files and config files are kept in application directory instead of home folders / user folders" OFF)
 
 IF(SUMWARS_UPDATE_HG_REVISION)
     FIND_PROGRAM(Mercurial_EXECUTABLE hg)
@@ -173,15 +174,14 @@ IF(SUMWARS_BUILD_TOOLS)
   INCLUDE_DIRECTORIES(${POCO_INCLUDE_DIR})
 ENDIF()
 
-IF(!WIN32)
-  INCLUDE_DIRECTORIES(${PTHREADS_INCLUDE_DIR})
-ENDIF()
 IF(WIN32)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/dirent)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/boost)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/gettext/include/)
   ADD_DEFINITIONS( "/W3 /D_CRT_SECURE_NO_WARNINGS /wd4800 /wd4244 /wd4305 /nologo" )
   MESSAGE("WARNING: Compiler warnings 4800, 4244 and 4305 disabled!")
+ELSE()
+  INCLUDE_DIRECTORIES(${PTHREADS_INCLUDE_DIR})
 ENDIF()
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/gui/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/config.h)
