Make sure we use EXECUTABLE_SUFFIX when copying to make it work on Windows (blind fix)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ IF( NOT CMAKE_BUILD_TYPE )
   SET( CMAKE_BUILD_TYPE "RelWithDebInfo" )
 ENDIF()
 
-MESSAGE(STATUS "Build type: " ${CMAKE_BUILD_TYPE})
+MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 # separating newline before configuration really happens
 MESSAGE(STATUS "")
 
@@ -517,7 +517,7 @@ TARGET_LINK_LIBRARIES(sumwars ${LINK_LIBS})
 IF(SUMWARS_POST_BUILD_COPY)
   ADD_CUSTOM_COMMAND(TARGET sumwars
     POST_BUILD
-    COMMAND COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/sumwars ${CMAKE_SOURCE_DIR}
+    COMMAND COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/sumwars${CMAKE_EXECUTABLE_SUFFIX} ${CMAKE_SOURCE_DIR}
   )
 ENDIF()
 
