Fixed a typo - COMMAND COMMAND

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -520,7 +520,7 @@ TARGET_LINK_LIBRARIES(sumwars ${LINK_LIBS})
 IF(SUMWARS_POST_BUILD_COPY)
   ADD_CUSTOM_COMMAND(TARGET sumwars
     POST_BUILD
-    COMMAND COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/sumwars${CMAKE_EXECUTABLE_SUFFIX} ${CMAKE_SOURCE_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/sumwars${CMAKE_EXECUTABLE_SUFFIX} ${CMAKE_SOURCE_DIR}
   )
 ENDIF()
 
