Fixed X11 resolution detection, blind fixed MacOSX resolution detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -505,6 +505,7 @@ IF(SUMWARS_BUILD_TOOLS)
     )
   ADD_DEFINITIONS(-DSUMWARS_BUILD_TOOLS)
 ENDIF()
+
 IF(WIN32)
   SET(LINK_LIBS
     ws2_32.lib
@@ -512,6 +513,12 @@ IF(WIN32)
     ${LINK_LIBS}
     ${GNUWIN_LIBRARY}
     ${BoostOGRE_LIBRARIES}
+    )
+ELSEIF(UNIX AND NOT APPLE)
+  SET(LINK_LIBS
+    X11
+    Xrandr
+    ${LINK_LIBS}
     )
 ENDIF()
 
