Keep the AUTHORS file compiled in so we don't rely on doc folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,8 +200,14 @@ ELSE()
   INCLUDE_DIRECTORIES(${PTHREADS_INCLUDE_DIR})
 ENDIF()
 
+FILE(READ ${CMAKE_CURRENT_SOURCE_DIR}/AUTHORS SUMWARS_AUTHORS_CONTENT)
+MESSAGE("Before: ${SUMWARS_AUTHORS_CONTENT}")
+STRING(REPLACE \n \\n SUMWARS_AUTHORS_CONTENT "${SUMWARS_AUTHORS_CONTENT}")
+MESSAGE("After: ${SUMWARS_AUTHORS_CONTENT}")
+
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/gui/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/config.h)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/share/resources.cfg.in ${CMAKE_CURRENT_SOURCE_DIR}/share/resources.cfg)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/gui/creditswindow_content.inc.in ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/creditswindow_content.inc)
 
 SET(HEADER_FILES
   ./src/gui/config.h
