Added Ogre1.8 compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,9 +127,15 @@ if(NOT CMAKE_INSTALL_PREFIX)
 endif()
 
 FIND_PACKAGE(OGRE REQUIRED)
-IF(NOT "${OGRE_VERSION_NAME}" STREQUAL "Cthugha")
+
+IF("${OGRE_VERSION_NAME}" STREQUAL "Cthugha")
+  set(SUMWARS_OGRE_SINGLETON "ms_Singleton")
+ELSEIF("${OGRE_VERSION_NAME}" STREQUAL "Byatis")
+  set(SUMWARS_OGRE_SINGLETON "msSingleton")
+ELSE()
   MESSAGE(SEND_ERROR "You need Ogre 1.7 Cthugha to build this.")
 ENDIF()
+
 
 IF (WIN32)
  FIND_PACKAGE(BoostOGRE REQUIRED)
