--- a/src/version.h.in
+++ b/src/version.h.in
@@ -1,10 +1,11 @@
-#ifndef __version_h__
-#define __version_h__
+#ifndef __SUMWARS_VERSION_H__
+#define __SUMWARS_VERSION_H__
 
-#define VERSION_MAJOR ${${PROJECT_NAME}_VERSION_MAJOR}
-#define VERSION_MINOR ${${PROJECT_NAME}_VERSION_MINOR}
-#define VERSION_PATCH ${${PROJECT_NAME}_VERSION_PATCH}
-#define VERSION_REVISION ${${PROJECT_NAME}_VERSION_REVISION}
-#define VERSION "${${PROJECT_NAME}_VERSION}"
+#define SUMWARS_VERSION_MAJOR @SUMWARS_VERSION_MAJOR@
+#define SUMWARS_VERSION_MINOR @SUMWARS_VERSION_MINOR@
+#define SUMWARS_VERSION_PATCH @SUMWARS_VERSION_PATCH@
+#define SUMWARS_VERSION_REVISION "@SUMWARS_VERSION_REVISION@"
+#define SUMWARS_VERSION "@SUMWARS_VERSION@"
+#define SUMWARS_SHORT_VERSION "@SUMWARS_SHORT_VERSION@"
 
-#endif //__version_h__
+#endif //__SUMWARS_VERSION_H__
