corrected main branch items

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,8 +342,8 @@ SET(SRCS
   ./src/gui/tooltip.cpp
   ./src/gui/optionswindow.cpp
   ./src/gui/clipboard.cpp
-  ./src/gui/ShaderManager.cpp
-  ./src/gui/ShadowCameraSetup.cpp
+#   ./src/gui/ShaderManager.cpp
+#   ./src/gui/ShadowCameraSetup.cpp
 )
  
 IF(SUMWARS_BUILD_TOOLS)
