Added CEGUI XML schemas (sourced from 0.7.6 tarball), set the parser accordingly
fixes #44

--- a/src/gui/default_resources.cfg.inc.in
+++ b/src/gui/default_resources.cfg.inc.in
@@ -38,6 +38,9 @@ const std::string defaultResourcesCfg =
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/schemes\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/animations\n"
 "\n"
+"[GUI_XML_schemas]\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/xml_schemas\n"
+"\n"
 "[emotionsets]\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/emotionsets\n"
 "\n"
