--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -548,6 +548,7 @@ install(DIRECTORY "${OGRE_PLUGIN_DIR_REL}/"
 endif()
   
 # only CPack code below this line
+SET(CPACK_PACKAGE_NAME "sumwars")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Summoning Wars Role-Playing Game")
 SET(CPACK_PACKAGE_VENDOR "Sumwars team")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
@@ -557,7 +558,14 @@ SET(CPACK_PACKAGE_VERSION_MINOR "${SUMWARS_VERSION_MINOR}")
 SET(CPACK_PACKAGE_VERSION_PATCH "${SUMWARS_VERSION_PATCH}")
 
 SET(CPACK_SOURCE_GENERATOR TBZ2 ZIP)
-SET(CPACK_GENERATOR NSIS)
+SET(CPACK_GENERATOR NSIS DEB)
+
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Sumwars team")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libogremain-1.7.3, libcegui, libois-1.3.0, libalut0, liblua5.1-0, libopenal1, libvorbis0a, libfreeimage3, libphysfs1, libxrandr2")
+SET(CPACK_DEBIAN_PACKAGE_SECTION "games")
+SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+set(CPACK_SET_DESTDIR "ON")
+
 
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "sumwars-${SUMWARS_SHORT_VERSION}" CACHE INTERNAL "tarball basename")
 
@@ -578,5 +586,4 @@ set(CPACK_SOURCE_IGNORE_FILES
 
 "\\\\.sumwars"
 )
-
 INCLUDE(CPack)
